# efficient_spiking_networks

./: .gitignore  .pre-commit-config.yaml  .pylintrc  ChangeLog  README.md  pyproject.toml
.reuse/: dep5
src/: ChangeLog  __init__.py  code.tex
src/GSC/: ChangeLog  ChangeLog.license  config-v1-cuda.toml  data.py  fuse.py  optim.py  pta.py  srnn.py  srnn_fin.py  utils.py
src/GSC/auxiliary_data/: ChangeLog  README.md  testing_list_srnn.txt
src/efficient_spiking_networks/: ChangeLog  __init__.py
src/efficient_spiking_networks/srnn_layers/: ChangeLog  spike_cnn.py  spike_dense.py  spike_neuron.py  spike_rnn.py
src/efficient_spiking_networks/utilities/: ChangeLog  __init__.py  decorators.py
src/esn/: __init__.py
src/model/: .gitignore
src/srnn_layers/: spike_neuron.py
src/utilities/: ChangeLog  decorators.py  exceptions.py  gencat.py  gendfind.py  genfind.py  gengrep.py  genopen.py
tests/: ChangeLog  ChangeLog.license  test_esn.py
